Version 0.9.0alpha8 - 2007-04-15
 * Bux Fixes:
   * Don't open the file for analyzing twice. (#2733, #2734)
   * Save ASIN and release country to ID3 tags. (#2484, #2456)
   * Variable %country% renamed to %releasecountry%.
   * Save release country to MP4 and WMA tags.
   * Don't take unsupported tags into account when checking if the
     tags are 'complete' and the file should have 100% match. This
     fixes problems with showing the green check-marks for file
     with limited tag formats, like MP4 or WMA.

Version 0.9.0alpha7 - 2007-04-14
 * New Features
   * Remember location in the file browser. (#2618)
   * Added FFmpeg support on Windows (MP3, Vorbis,
     FLAC, WavPack and many other audio formats).
   * Lowercase the extension on file renaming/moving. (#2701)
   * TaggerScript function `$copy(new,old)` to copy metadata from
     variable `old` to `new`. The difference between `$set(new,%old%)`
     is that `$copy(new,old)` copies multi-value variables without
     flattening them.
   * Added special purpose TaggerScript variable `%_id3:%` for direct
     setting of ID3 frames. Currently it supports only TXXX frames in format
     `%_id3:TXXX:<description>%`, for example:
     `$copy(_id3:TXXX:PERFORMERSORTORDER,artistsort)`.
   * Support for WAV files. (#2537)
   * Removed GStreamer-based decoder.
   * Implemented `python setup.py install_locales`.
 * Bug Fixes:
   * Failed PUID submission deactivates the submit button. (#2673)
   * Unable to specify album art file name mask. (#2655)
   * Fixed incorrect copying of album metadata to tracks. (#2698)
   * Added options to un-hide toolbars. (#2631)
   * Fixed problem with saving extra performer FLAC tags
     containing non-ASCII characters. (#2719)
   * Read only the first date from ID3v2.3 tags. (#2460)
   * If the remembered directory for add dialogs and file browser was
     removed, try to find an existing directory in the same path.

Version 0.9.0alpha6 - 2007-04-04
 * New Features: